--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1371,25 +1371,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City Name</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ambilobe</td>\n",
+       "      <td>-13.20</td>\n",
+       "      <td>49.05</td>\n",
+       "      <td>68.11</td>\n",
+       "      <td>82</td>\n",
+       "      <td>32</td>\n",
+       "      <td>4.16</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>1592872024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lucea</td>\n",
+       "      <td>18.45</td>\n",
+       "      <td>-78.17</td>\n",
+       "      <td>86.00</td>\n",
+       "      <td>74</td>\n",
+       "      <td>20</td>\n",
+       "      <td>14.99</td>\n",
+       "      <td>JM</td>\n",
+       "      <td>1592872024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Saint-Pierre</td>\n",
+       "      <td>-21.34</td>\n",
+       "      <td>55.48</td>\n",
+       "      <td>66.20</td>\n",
+       "      <td>77</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>RE</td>\n",
+       "      <td>1592872024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Atuona</td>\n",
+       "      <td>-9.80</td>\n",
+       "      <td>-139.03</td>\n",
+       "      <td>79.83</td>\n",
+       "      <td>79</td>\n",
+       "      <td>43</td>\n",
+       "      <td>13.73</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>1592872024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Codrington</td>\n",
+       "      <td>-38.27</td>\n",
+       "      <td>141.97</td>\n",
+       "      <td>58.24</td>\n",
+       "      <td>85</td>\n",
+       "      <td>93</td>\n",
+       "      <td>16.37</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1592872024</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "City Name     547\n",
-       "Latitude      547\n",
-       "Longitude     547\n",
-       "Max Temp      547\n",
-       "Humidity      547\n",
-       "Cloudiness    547\n",
-       "Wind Speed    547\n",
-       "Country       547\n",
-       "Date          547\n",
-       "dtype: int64"
+       "      City Name  Latitude  Longitude  Max Temp  Humidity  Cloudiness  \\\n",
+       "0      Ambilobe    -13.20      49.05     68.11        82          32   \n",
+       "1         Lucea     18.45     -78.17     86.00        74          20   \n",
+       "2  Saint-Pierre    -21.34      55.48     66.20        77          19   \n",
+       "3        Atuona     -9.80    -139.03     79.83        79          43   \n",
+       "4    Codrington    -38.27     141.97     58.24        85          93   \n",
+       "\n",
+       "   Wind Speed Country        Date  \n",
+       "0        4.16      MG  1592872024  \n",
+       "1       14.99      JM  1592872024  \n",
+       "2        5.82      RE  1592872024  \n",
+       "3       13.73      PF  1592872024  \n",
+       "4       16.37      AU  1592872024  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1498,8 @@
     "             \"Wind Speed\":Wind_Speed, \"Country\":Country,\"Date\": Date }\n",
     "\n",
     "weather_df = pd.DataFrame(weather_dict)  \n",
-    "weather_df.count()"
+    "weather_df.to_csv('city_weather_data.csv') #export dataframe to csv\n",
+    "weather_df.head()"
    ]
   },
   {
